# SteinerConfigurations

./: .directory  BruteForcer.h  CMakeLists.txt  Reader.h  Verifier.h  a.out  main.cpp  make.sh  res.txt
configurations/: C(10,6).txt
graphs/: g2.txt
graphs/1/: 5PS.44
graphs/3/: 2TF1-03B.56
src/main/: ArgsParser.h  Reader.h  Verifier.h  common.h  main.cpp
src/main/testers/: BruteForcer.h  BruteForcer_C_10_6.h  ColoringTester.cpp  ColoringTester.h
src/main/tests/: ColorTest.h  RemovabilityTest.h
